k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  labels:
    app: api
spec:
  replicas: 4
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: go-api
        image: us.gcr.io/vallery-demo/demo:1
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: 128M
            cpu: 50m
          limits:
            memory: 256M
            cpu: 100m
